[package]
name = "objgraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name="shadow"
path="examples/shadow.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_rootedrc"
harness = false